style/style.css
@font-face {
    font-family: Montserrat;
    src: url(./fonts/Montserrat-VariableFont_wght.ttf);
}

html {
    margin:0;
    height:100%;
    background-color:var(--bgp_0);
}

body {
    margin:0;
    min-height:100%;
}

main {
    font-family: Montserrat;
    color:var(--bgp_0);
    max-width:1000px;
    margin:auto;
    min-height:100%;
    display: grid;
    grid-template-rows:min-content auto;
}

h2 {
    margin-top:10px;
    margin-bottom:15px;
}

.header {
    background-color:var(--bgp_1);
    color:var(--bgp_3);
    padding:5px;
}

.content {
    font-size: 16px;
    display: grid;
    grid-template-columns: max-content auto;
}

.content h3 {
    margin:0;
}

.content ul {
    margin:0;
}

a {
    color:var(--bgp_0);
}

a:hover {
    color:var(--bgp_1);
}

.left-panel {
    background-color:var(--bgp_2);
    padding:10px;
    font-size: 13px;
}

.left-panel > * {
    padding-left: 0px;
}

.left-panel h3 {
    padding-left: 10px;
}

.left-panel ul {
    padding-left: 30px;
    list-style: none;
}

.main-panel {
    background-color:var(--bgp_3);
    padding: 30px;
}

.experiences-list {
    list-style: none;
    padding: 0;
}

.experience-item>ul {
    list-style: none;
    display: grid;
    grid-template-columns: 100px auto;
    grid-template-rows: auto;
    grid-template-areas: 
        "period title"
        "location description ";
    padding: 0;
}

.experience-item .title {
    grid-area: title;
    display: grid;
    grid-template-columns: auto auto;
}

.experience-item .title h3 {
    display: inline;
    padding-right: 10px;
    color:var(--bgp_0);
    font-size: initial;
}

.experience-item .title h4 {
    display: inline;
    color:var(--bgp_1);
    font-weight: normal;
    font-size:12px;
    margin: 0px;
    align-self: center;
    text-align: right;
}

.experience-item .location {
    grid-area: location;
    color:var(--bgp_1);
    font-size:12px;
    padding-right: 10px;
    text-align: end;
}

.experience-item .period {
    grid-area: period;
    color:var(--bgp_1);
    font-size:12px;
    align-self: center;
    text-align: end;
    padding-right: 10px;
}

.experience-item .description {
    grid-area: description;
    padding-bottom: 10px;
    text-align: justify;
}

.hobbies-list {
    padding: 0px;
    display: grid;   
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 1px;
    list-style:none;
    background-color:var(--bgp_2);
}

.hobby-item {
    padding: 5px;
    background-color:var(--bgp_3);
}

.hobby-item h3 {
    text-align: center;    
}

.hobby-item p {
    text-align: center;
    margin-top: 5px;
    margin-bottom: 10px;
}

.groseille-button {
    display: block;
    margin: auto;
    padding: 0;
    border: 0;
    width: 64px;
    height: 64px;
    cursor: crosshair;
    image-rendering: crisp-edges;
}
span.first-letters {
    color:var(--bgp_1);
}

@media print, weasy {
    @page {
        size:A4;
        margin:0;
    }
     
    html, body, main {
        width:210mm;
        height:297mm;
    }
    
    main {
        grid-template-rows:12% 88%;
    }
 

    h2 {
        margin-top:5px;
        margin-bottom:12px;
    }
    
    .content {
        font-size:14px;
    }
    
    .left-panel > * {
        padding-left: 0px;
    }

    .left-panel h3 {
        padding-left: 5px;
    }

    .left-panel ul {
        padding-left: 15px;
        list-style: none;
    }
    
    .left-panel {
        font-size:12px;
    }
    
    .main-panel {
        padding: 20px;
    }
    
    .hobby-item p {
        font-size:12px
    }
}

@media weasy {
    .content {
        /* max-content not supported atm by weasyprintpdf... */        
        grid-template-columns: 27% 73%;
    }
    .main-panel { /* Weasyprint /shrug */
        overflow:scroll;
        max-height: 100%;
    }
}

